--- a/moo/m.html
+++ b/moo/m.html
@@ -8,7 +8,7 @@
   <body>
     <pre id="readout">Waiting for data...</pre>
 
-    <pre id="moo">testing</pre>
+    <pre id="moo">testing222</pre>
 
     <script>
       grist.ready();
