--- a/moo/chart.html
+++ b/moo/chart.html
@@ -99,6 +99,13 @@ anychart.theme('darkTurquoise');
       var rangeSelector = anychart.ui.rangeSelector();
       // init range selector
       rangeSelector.render(chart);
+
+
+	// moo change background
+	chart.background().fill({
+  	keys: ["#fff", "#66f", "#fff"],
+  	angle: 130,
+		});
     });
   
 </script>
