--- a/moo/chart.html
+++ b/moo/chart.html
@@ -102,10 +102,7 @@ anychart.theme('darkTurquoise');
 
 
 	// moo change background
-	chart.background().fill({
-  	keys: ["#fff", "#66f", "#fff"],
-  	angle: 130,
-		});
+	chart.background().fill("#373540");
     });
   
 </script>
