--- a/moo/chart.html
+++ b/moo/chart.html
@@ -5,8 +5,6 @@
   <meta charset="utf-8">
   <title>onRecord</title>
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
-
-
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
@@ -29,15 +27,15 @@
 </head>
 
 <body>
-
   <div id="container"></div>
   <pre id="readout">Waiting for data...</pre>
+
   <script>
     var datamap = ''
     grist.ready();
     grist.onRecords(function (records) {
       datamap = JSON.stringify(records, null, 2);
-
+      document.getElementById('readout').innerHTML = datamap;
 
 
       anychart.onDocumentReady(function () {
@@ -114,8 +112,8 @@
 
 
     });
-    console.log(datamap)
-    document.getElementById('readout').innerHTML = datamap
+    //console.log(datamap)
+
 
 
   </script>
