--- a/moo/chart.html
+++ b/moo/chart.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>onRecord</title>
+  <title>Chart</title>
   <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
