--- a/moo/chart.html
+++ b/moo/chart.html
@@ -37,7 +37,9 @@
       datamap = JSON.stringify(records, null, 2);
 
 
-      anychart.onDocumentReady(function () {
+      //anychart.onDocumentReady(function () {
+      anychart.onRecords(function () {
+      
         //anychart.theme('darkEarth');
 
         var aa = []
