--- a/moo/c5.html
+++ b/moo/c5.html
@@ -55,7 +55,7 @@
 
                         ]);
                 });
-                document.getElementById('readout').innerHTML = aa;
+                //document.getElementById('readout').innerHTML = aa;
                 
                 dataTable.addData(aa);
 
