--- a/moo/v10.html
+++ b/moo/v10.html
@@ -93,7 +93,7 @@
                         xAnchor: e['time'],
                         background: "#39695d .0",
                         anchor: action == 'buy' ? "center-top" : "center-bottom",
-                        fontColor: action == 'buy' ? "#AAFF00" : "#FF5733",//offsetY:-65,
+                        fontColor: action == 'buy' ? "#7CFC00" : "#F66647",//offsetY:-65,
                         hAlign: "center"
                     });
 
