--- a/moo/v14.html
+++ b/moo/v14.html
@@ -8,17 +8,9 @@
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
    <script  src="https://s3.tradingview.com/tv.js"></script>
 	
-    <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/v8/js/anychart-exports.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/v8/js/anychart-stock.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/v8/js/anychart-data-adapter.min.js"></script>
-    <script src="https://cdn.anychart.com/csv-data/msft-daily-short-data(2011-2016).js"></script>
-    <script src="https://cdn.anychart.com/releases/v8/themes/dark_turquoise.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.11.1/js/anychart-annotations.min.js"></script>
-    <link href="https://cdn.anychart.com/releases/v8/css/anychart-ui.min.css" type="text/css" rel="stylesheet">
-    <link href="https://cdn.anychart.com/releases/v8/fonts/css/anychart-font.min.css" type="text/css" rel="stylesheet">
-    <style type="text/css">
+   <script src="https://cdn.anychart.com/releases/8.12.0/js/anychart-core.min.js" type="text/javascript"></script>
+   <script src="https://cdn.anychart.com/releases/8.12.0/js/anychart-stock.min.js" type="text/javascript"></script>
+	<style type="text/css">
   html,
   body{
 		width: 100%;
