--- a/moo/v14.html
+++ b/moo/v14.html
@@ -259,7 +259,7 @@ grist.onRecords(function (records) {
     document.getElementById('tradingview').innerHTML = "";
     console.log(datamap)
     window.coin = datamap[0]['coin'] + "THB"
-    //gristChart();
+    gristChart();
     tradingViewChart();
     });
 
