Update and rename hm02.html to hm01.html

--- a/moo/hm01.html
+++ b/moo/hm01.html
@@ -136,7 +136,7 @@
                     return data//console.log(lo,data);	
 
                 }
-
+                let mm = genHeatmap("dd")
                 // create a chart and set the data
                 var chart = anychart.heatMap(mm);
 
