Update and rename hm01.html to hm03.html

--- a/moo/hm03.html
+++ b/moo/hm03.html
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-    <pre id="readout">Waiting for data...</pre>
+    <pre id="readout4">Waiting for data...</pre>
     <div id="container"></div>
 
     <script>
