--- a/moo/hm02.html
+++ b/moo/hm02.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8">
     <title>Chart</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
-
     <script
         src="https://cdn.anychart.com/releases/8.12.0/js/anychart-base.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
     <script
@@ -14,154 +13,118 @@
         src="https://cdn.anychart.com/releases/8.12.0/js/anychart-exports.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
     <script
         src="https://cdn.anychart.com/releases/8.12.0/js/anychart-ui.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
-    <style type="text/css">
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-
-            overflow: hidden;
-
-
+    <div id="ac_style_samples-bct-heat-map-chart-01" style="display:none;">
+        html, body, #container {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
         }
-
-        #anychart {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-
-        .float {
-            position: fixed;
-            width: 30px;
-            height: 30px;
-            left: 15px;
-            bottom: 45px;
-            background-color: black;
-            color: #FFF;
-            border-radius: 50px;
-            text-align: center;
-            box-shadow: 0px 0px 0px #999;
-            z-index: 7;
-        }
-
-        .my-float {
-            margin-top: 2px;
-        }
-    </style>
+    </div>
 </head>
 
 <body>
-    <pre id="readout4">Waiting for data...</pre>
+    <pre id="readout">Waiting for data...</pre>
     <div id="container"></div>
-
     <script>
         var datamap = '';
+        var heatData = '';
+        var grist = [{
+            "id": 7,
+            "device_label": "1901-CW",
+            "Feb05_19": 0,
+            "Feb05_20": 0,
+            "Feb05_21": 0,
+            "Feb05_22": 0,
+            "Feb05_23": 0,
+            "Feb06_00": 0,
+            "Feb06_01": 0,
+            "Feb06_02": 0,
+            "Feb06_03": 0,
+            "Feb06_04": 0,
+            "Feb06_05": 0,
+            "Feb06_06": 0,
+            "Feb06_07": 0,
+            "Feb06_08": 0,
+            "Feb06_09": 0,
+            "Feb06_10": 0,
+            "Feb06_11": 0.011,
+            "Feb06_12": 0.016,
+            "Feb06_13": 0,
+            "Feb06_14": 0.026,
+            "Feb06_15": 0,
+            "Feb06_16": 0,
+            "Feb06_17": 0,
+            "Feb06_18": 0,
+            "Feb06_19": 0
+        }, {
+            "id": 97,
+            "device_label": "1902-CW",
+            "Feb05_19": 0,
+            "Feb05_20": 0,
+            "Feb05_21": 0,
+            "Feb05_22": 0,
+            "Feb05_23": 0,
+            "Feb06_00": 0,
+            "Feb06_01": 0,
+            "Feb06_02": 0,
+            "Feb06_03": 0,
+            "Feb06_04": 0,
+            "Feb06_05": 0,
+            "Feb06_06": 0,
+            "Feb06_07": 0,
+            "Feb06_08": 0,
+            "Feb06_09": 0,
+            "Feb06_10": 0,
+            "Feb06_11": 0.011,
+            "Feb06_12": 0.016,
+            "Feb06_13": 0,
+            "Feb06_14": 0.026,
+            "Feb06_15": 0,
+            "Feb06_16": 0,
+            "Feb06_17": 0,
+            "Feb06_18": 0,
+            "Feb06_19": 0
+        }]
+
+        // ----------------grist start here 
         grist.ready();
 
-        function anychart() {
-            anychart.onDocumentReady(function () {
-                var grist = [{
-                    "id": 7,
-                    "device_label": "1901-CW",
-                    "Feb05_19": 0,
-                    "Feb05_20": 0,
-                    "Feb05_21": 0,
-                    "Feb05_22": 0,
-                    "Feb05_23": 0,
-                    "Feb06_00": 0,
-                    "Feb06_01": 0,
-                    "Feb06_02": 0,
-                    "Feb06_03": 0,
-                    "Feb06_04": 0,
-                    "Feb06_05": 0,
-                    "Feb06_06": 0,
-                    "Feb06_07": 0,
-                    "Feb06_08": 0,
-                    "Feb06_09": 0,
-                    "Feb06_10": 0,
-                    "Feb06_11": 0.011,
-                    "Feb06_12": 0.016,
-                    "Feb06_13": 0,
-                    "Feb06_14": 0.026,
-                    "Feb06_15": 0,
-                    "Feb06_16": 0,
-                    "Feb06_17": 0,
-                    "Feb06_18": 0,
-                    "Feb06_19": 0
-                }, {
-                    "id": 97,
-                    "device_label": "1902-CW",
-                    "Feb05_19": 0,
-                    "Feb05_20": 0,
-                    "Feb05_21": 0,
-                    "Feb05_22": 0,
-                    "Feb05_23": 0,
-                    "Feb06_00": 0,
-                    "Feb06_01": 0,
-                    "Feb06_02": 0,
-                    "Feb06_03": 0,
-                    "Feb06_04": 0,
-                    "Feb06_05": 0,
-                    "Feb06_06": 0,
-                    "Feb06_07": 0,
-                    "Feb06_08": 0,
-                    "Feb06_09": 0,
-                    "Feb06_10": 0,
-                    "Feb06_11": 0.011,
-                    "Feb06_12": 0.016,
-                    "Feb06_13": 0,
-                    "Feb06_14": 0.026,
-                    "Feb06_15": 0,
-                    "Feb06_16": 0,
-                    "Feb06_17": 0,
-                    "Feb06_18": 0,
-                    "Feb06_19": 0
-                }]
-                function genHeatmap(d) {
-                    let data = []
-                    for (i in d) {
-                        //console.log(d[i]);
-                        var lo = d[i]['device_label'];
-                        delete d[i]['device_label'];
-                        delete d[i]['id'];
-                        for (const [key, value] of Object.entries(d[i])) {
-                            data.push({ x: key, y: lo, heat: value })
-                        }
-                    }
-                    return data//console.log(lo,data);	
+        anychart.onDocumentReady(function () {
+            var chart = anychart.heatMap(heatData);
+            chart.title("Heat Map: Basic Sample");
+            chart.container("container");
+            chart.draw();
+        });
+
+        function genHeatmap(d) {
+            let data = []
+            for (i in d) {
+                //console.log(d[i]);
+                var lo = d[i]['device_label'];
+                delete d[i]['device_label'];
+                delete d[i]['id'];
+                for (const [key, value] of Object.entries(d[i])) {
+                    data.push({ x: key, y: lo, heat: value })
 
                 }
-                let mm = genHeatmap(datamap)
-                // create a chart and set the data
-                var chart = anychart.heatMap(mm);
+            }
+            return data//console.log(lo,data);	
 
-                // set the chart title
-                chart.title("Heat Map: Basic Sample");
-
-                // set the container id
-                chart.container("container");
-
-                // initiate drawing the chart
-                chart.draw();
-
-
-
-
-
-            })
         }
 
+        
         grist.onRecords(function (records) {
-            datamap = records
-            //document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
-            anychart()
+        datamap = records
+                    console.log(records)
 
-        });
-        //anychart()
+        document.getElementById('readout').innerHTML = JSON.stringify(records, null, 2);
+        heatData =genHeatmap(records)
+    });
+ 
+        heatData = genHeatmap(grist)
+
+
 
     </script>
 </body>
