Update and rename hm07.html to hm08.html

--- a/moo/hm08.html
+++ b/moo/hm08.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Chart</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
+    
     <script
         src="https://cdn.anychart.com/releases/8.12.0/js/anychart-base.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
     <script
@@ -13,14 +14,7 @@
         src="https://cdn.anychart.com/releases/8.12.0/js/anychart-exports.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
     <script
         src="https://cdn.anychart.com/releases/8.12.0/js/anychart-ui.min.js?hcode=a0c21fc77e1449cc86299c5faa067dc4"></script>
-    <div id="ac_style_samples-bct-heat-map-chart-01" style="display:none;">
-        html, body, #container {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        }
-    </div>
+    
 </head>
 
 <body>
@@ -29,7 +23,7 @@
     <script>
         var datamap = '';
         var heatData = '';
-        var grist = [{
+        var gristdat = [{
             "id": 7,
             "device_label": "1901-CW",
             "Feb05_19": 0,
